syntax = "proto3";

message Data {
  oneof type {
    string roomName = 1;
    int32 position = 2;
    string DisplayName = 3;
    string message = 4;
    string newUserID = 5;
    Event event = 7;
    Otoshidama otoshidama = 8;
    Roulette roulette = 11;
    Spaces spaces = 9;
    int32 otoshidamaTotal = 12;
  }
  string userID = 6;
  optional string result = 10;
}

message Spaces {
  repeated Space spaces = 1;
}

enum Event {
  ROULETTE = 0;
  OTOSHIDAMA = 1;
  FURIDASHI = 2;
  JOIN = 3;
  LEAVE = 4;
}

enum Space{
  START_SPACE = 0;
  GOAL_SPACE = 1;
  OTOSHIDAMA_SPACE = 2;
  ROULETTE_SPACE = 3;
  FURIDASHI_SPACE = 4;
}

message Otoshidama{
  string userID = 1;
  int32 amount = 2;
}

message Roulette {
  string userID = 1;
  int32 number = 2;
}