syntax = "proto3";

message ServerMessage {
  oneof type {
    PlayerTurnStart playerTurnStart = 1;
    SugorokuMoveUpdate sugorokuMoveUpdate = 2;
    PlayerMovementDisplay playerMovementDisplay = 3;
    QuizStart quizStart = 4;
    QuizResult quizResult = 5;
    OtoshidamaEvent otoshidamaEvent = 6;
    RankingUpdate rankingUpdate = 7;
    GameStart gameStart = 8;
    GameEnd gameEnd = 9;
    RoomJoinResponse roomJoinResponse = 10;
    string ReturnPlayerId = 11;
    RoomState roomState = 12;
  }
}

message PlayerTurnStart {
  string type = 1; // "PLAYER_TURN_START"
  Data data = 2;

  message Data {
    string playerId = 1;
  }
}

message SugorokuMoveUpdate {
  string type = 1; // "SUGOROKU_MOVE_UPDATE"
  Data data = 2;

  message Data {
    string playerId = 1;
    int32 stepsMoved = 2;
    int32 newPosition = 3;
  }
}

message PlayerMovementDisplay {
  string type = 1; // "PLAYER_MOVEMENT_DISPLAY"
  Data data = 2;

  message Data {
    string playerId = 1;
    int32 newPosition = 2;
  }
}

message QuizStart {
  string type = 1; // "QUIZ_START"
  Data data = 2;

  message Data {
    string playerId = 1;
    string quizQuestion = 2;
    repeated string options = 3;
    string answer = 4;
  }
}

message QuizResult {
  string type = 1; // "QUIZ_RESULT"
  Data data = 2;

  message Data {
    string PlayerId = 1;
    int32 otoshidamaAmount = 2;
    string message = 3;
    bool isCorrect = 4;
  }
}

message OtoshidamaEvent {
  string type = 1; // "OTOSHIDAMA_EVENT"
  Data data = 2;

  message Data {
    string playerId = 1;
    string message = 2;
    int32 otoshidamaAmount = 3;
  }
}

message GameStart{
  string type = 1; // "GAME_START"
  Data data = 2;

  message Data {
    repeated string playerIds = 1;
    Map map = 2;
    
    message Map {
      repeated squareType squares = 1;
      
      enum squareType {
        NORMAL = 0;
        QUIZ = 1;
        OTOSHIDAMA = 2;
        FURIDASHI = 3;
      }
    }
  }
}

message GameEnd {
  string type = 1; // "GAME_END"
  Data data = 2;

  message Data {
    map<string, int32> playerScores = 1;
  }
}

message RankingUpdate {
  string type = 1; // "RANKING_UPDATE"
  Data data = 2;

  message Data {
    repeated Ranking rankings = 1;

    message Ranking {
      string playerId = 1;
      int32 position = 2;
    }
  }
}

message RoomJoinResponse {
  string type = 1; // "ROOM_JOIN_RESPONSE"
  Data data = 2;

  message Data {
    string playerId = 1;
    string nickname = 2;
    string roomCode = 3;
  }
}

message RoomState {
  string type = 1; // "ROOM_STATE"
  Data data = 2;
  enum RoomState
  {
      Waiting = 0;
      Gaming = 1;
      Result = 2;
  }

  message Data {
    string roomCode = 1;
    repeated string userIDs = 2;
    map<string, int32> userOrder = 3;
    map<string, int32> userOtoshidama = 4;
    map<string, int32> userPosition = 5;
    map<string, bool> userIsAnswered = 6;
    map<string, int32> userIsAnsweredOrder = 7;
    map<string, string> userAnswer = 8;
    QuizStart quizData = 9;
    RoomState state = 10;
    GameStart.Data.Map sugorokuMap = 11;
    string CurrentTurnPlayerId = 12;
  }
}